--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "browserify": "^11.2.0",
     "express": "^4.13.3",
     "gulp": "^3.9.0",
+    "history": "^1.12.5",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-router": "^1.0.0-rc3",
