--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
   "author": "Sebastian de la Fuente",
   "license": "ISC",
   "dependencies": {
+    "babelify": "^6.4.0",
     "browserify": "^11.2.0",
     "express": "^4.13.3",
     "gulp": "^3.9.0",
+    "gulp-live-server": "0.0.29",
     "history": "^1.12.5",
+    "qwest": "^2.2.2",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-router": "^1.0.0-rc3",
-    "reactify": "^1.1.1",
+    "request": "^2.65.0",
     "vinyl-source-stream": "^1.1.0"
   }
 }
